--- a/index.html
+++ b/index.html
@@ -3,9 +3,25 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="style.css">
   <title>E-commerce Website</title>
 </head>
 <body>
-  <h1>Welcome to aish</h1>
+  <header class="section-navbar">
+    <section class="top_txt">
+       <div class="head container">
+        <div class="head_txt">
+          <p>Free Shipping, 30 Days Refund or Return Guarantee  </p>
+         </div>
+         <div class="sing_in_up">
+          <a href="#">SIGN IN</a>
+          <a href="#">SIGN UP</a>
+         </div>
+       </div>
+    </section>
+    
+
+
+  </header>
 </body>
 </html>
