--- a/index.html
+++ b/index.html
@@ -3,6 +3,16 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="apple-touch-icon" sizes="180x180" href=".fav-icon/apple-touch-icon.png">
+<link rel="icon" type="image/png" sizes="32x32" href=".fav-icon/favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="16x16" href=".fav-icon/favicon-16x16.png">
+<link rel="manifest" href=".fav-icon/site.webmanifest">
+<link rel="stylesheet"
+href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
+integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
+crossorigin="anonymous"
+referrerpolicy="no-referrer"
+/>
   <link rel="stylesheet" href="style.css">
   <title>E-commerce Website</title>
 </head>
@@ -19,7 +29,43 @@
          </div>
        </div>
     </section>
-    
+    <div class="container" >
+      <div class="navbar-brand">
+        <a href="index.html">
+          <img
+          src="./images/Aishwarya.png"
+          alt="Aishwarya eCommerce logo"
+          class="logo"
+          width="80%"
+          height="auto"
+        />
+        </a>
+       </div>
+<nav class="navbar">
+  <ul>
+    <li class="nav-item">
+      <a href="/" class="nav-link">Home</a>
+    </li>
+    <li class="nav-item">
+      <a href="about.html" class="nav-link">About</a>
+    </li>
+    <li class="nav-item">
+      <a href="products.html" class="nav-link">Products</a>
+    </li>
+    <li class="nav-item">
+      <a href="contact.html" class="nav-link">Contact</a>
+    </li>
+    <li class="nav-item">
+      <a href="addToCart.html"
+                class="nav-link add-to-cart-button"
+                id="cartValue">
+         <i class="fa-solid fa-cart-shopping">0</i>
+              </a>
+    </li>
+  </ul>
+</nav>
+
+    </div>
 
 
   </header>
