--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="apple-touch-icon" sizes="180x180" href=".fav-icon/apple-touch-icon.png">
-<link rel="icon" type="image/png" sizes="32x32" href=".fav-icon/favicon-32x32.png">
-<link rel="icon" type="image/png" sizes="16x16" href=".fav-icon/favicon-16x16.png">
-<link rel="manifest" href=".fav-icon/site.webmanifest">
+  <link rel="apple-touch-icon" sizes="180x180" href="./fav-icon/apple-touch-icon.png">
+<link rel="icon" type="image/png" sizes="32x32" href="./fav-icon/favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="16x16" href="./fav-icon/favicon-16x16.png">
+<link rel="manifest" href="./fav-icon/site.webmanifest">
 <link rel="stylesheet"
 href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
 integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
