--- a/index.html
+++ b/index.html
@@ -203,8 +203,8 @@ data-aos-delay="600">
         </div>
       </div>
     </section>
-
-    <section class="section-products container">
+    
+    <section class="section-products ">
       <div class="container">
         <h2 class="section-common--heading" style="text-align: center;" >Checkout Aishwarya Store</h2>
       </div>
