--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@ referrerpolicy="no-referrer"
           Your Destination for Cutting-Edge Gadgets!
         </h1>
         <p class="hero-para">
-          Welcome to Thapa eComStore, your ultimate destination for
+          Welcome to Aishwarya eComStore, your ultimate destination for
           cutting-edge gadgets! Explore the latest in tech innovation and
           style with us. Shop now and discover a world of possibilities!
         </p>
