--- a/products.html
+++ b/products.html
@@ -19,7 +19,53 @@ referrerpolicy="no-referrer"
 
 <body>
     <header class="section-navbar">
-        <script src="header.js"></script>
+        <section class="top_txt">
+           <div class="head container">
+            <div class="head_txt">
+              <p>Free Shipping, 30 Days Refund or Return Guarantee  </p>
+             </div>
+             <div class="sing_in_up">
+              <a href="#">SIGN IN</a>
+              <a href="#">SIGN UP</a>
+             </div>
+           </div>
+        </section>
+        <div class="container" >
+          <div class="navbar-brand">
+            <a href="index.html">
+              <img
+              src="./images/Aishwarya.png"
+              alt="Aishwarya eCommerce logo"
+              class="logo"
+              width="80%"
+              height="auto"
+            />
+            </a>
+           </div>
+    <nav class="navbar">
+      <ul>
+        <li class="nav-item">
+          <a href="/" class="nav-link">Home</a>
+        </li>
+        <li class="nav-item">
+          <a href="about.html" class="nav-link">About</a>
+        </li>
+        <li class="nav-item">
+          <a href="products.html" class="nav-link">Products</a>
+        </li>
+        <li class="nav-item">
+          <a href="contact.html" class="nav-link">Contact</a>
+        </li>
+        <li class="nav-item">
+          <a href="addToCart.html"
+            class="nav-link add-to-cart-button"
+            id="cartValue">
+            <i class="fa-solid fa-cart-shopping">0</i>
+          </a>
+        </li>
+      </ul>
+    </nav>
+    </div>
     </header>
     <section class="section-extra-product">
         <div class="container grid grid-three--cols">
@@ -112,8 +158,45 @@ referrerpolicy="no-referrer"
         </template>
       </section>
 
-    <footer class="section-footer">
-        <script src="footer.js"></script>
+      <footer class="section-footer">
+        <div class="footer-container container">
+          <div class="content_1">
+            <img src="./images/Aishwarya.png" alt="logo" />
+            <p>
+              Welcome to Aishwarya Ecom Store, your ultimate destination for
+              cutting-edge gadgets!
+            </p>
+            <img src="https://i.postimg.cc/Nj9dgJ98/cards.png" alt="cards" />
+          </div>
+          <div class="content_2">
+            <h4>SHOPPING</h4>
+            <a href="#">Computer Store</a>
+            <a href="#">Laptop Store</a>
+            <a href="#">Accessories</a>
+            <a href="#">Sales & Discount</a>
+          </div>
+          <div class="content_3">
+            <h4>Experience</h4>
+            <a href="./contact.html">Contact Us</a>
+            <a href="" target="_blank">Payment Method</a>
+            <a href="" target="_blank">Delivery</a>
+            <a href="" target="_blank">Return and Exchange</a>
+          </div>
+          <div class="content_4">
+            <h4>NEWSLETTER</h4>
+            <p>Be the first to know about new<br />arrivals, sales & promos!</p>
+            <div class="f-mail">
+              <input type="email" placeholder="Your Email" />
+              <i class="bx bx-envelope"></i>
+            </div>
+            <hr />
+          </div>
+        </div>
+        <div class="f-design">
+          <div class="f-design-txt">
+            <p>Design and Code by Aishwarya Kesharwani</p>
+          </div>
+        </div>
       </footer>
       <script type="module" src="main.js"></script>
     </body>
